--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src = "https://www.bing.com/images/search?view=detailV2&ccid=b5m3YSiZ&id=EE2541834FC73FC15437DE0C05C4AF6FF2937347&thid=OIP.b5m3YSiZ2w5KKbjfIozRGAHaFz&mediaurl=https%3a%2f%2fthumbs.dreamstime.com%2fz%2fdog-playing-football-soccer-ball-its-paw-jack-russell-terrier-shows-dribbling-79776249.jpg&exph=1254&expw=1600&q=dog+playing+football&simid=608052707421533879&FORM=IRPRST&ck=75CBAF7CD10A31F94A655DED72FBDD25&selectedIndex=1&itb=0" alt="dog playing with football"></img>
     <script type="text/javascript" src="./script.js">
 </script>
 
