--- a/main.html
+++ b/main.html
@@ -8,9 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src = "https://www.bing.com/images/search?view=detailV2&ccid=b5m3YSiZ&id=EE2541834FC73FC15437DE0C05C4AF6FF2937347&thid=OIP.b5m3YSiZ2w5KKbjfIozRGAHaFz&mediaurl=https%3a%2f%2fthumbs.dreamstime.com%2fz%2fdog-playing-football-soccer-ball-its-paw-jack-russell-terrier-shows-dribbling-79776249.jpg&exph=1254&expw=1600&q=dog+playing+football&simid=608052707421533879&FORM=IRPRST&ck=75CBAF7CD10A31F94A655DED72FBDD25&selectedIndex=1&itb=0" alt="dog playing with football"></img>
-    <script type="text/javascript" src="./script.js">
-</script>
+	<img src = "https://images.unsplash.com/photo-1745426431516-7fcf72dc6415?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="a kitchen photo"></img>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
